...
const HomeStack = createNativeStackNavigator<HomeStackParamList>();
const Tab = createBottomTabNavigator<MainTabParamList>();

function HomeStackNavigator() {
  return (
    <HomeStack.Navigator>
      <HomeStack.Screen name="Home" component={HomeScreen} options={{ title: 'My Communities' }} />
      <HomeStack.Screen name="Community" component={CommunityScreen} options={{ title: 'Community' }} />
      <HomeStack.Screen name="CommunityInfo" component={CommunityInfoScreen} options={{ title: 'Manage' }} />
      <HomeStack.Screen name="JoinCommunity" component={JoinCommunityScreen} options={{ title: 'Add Community' }} />
    </HomeStack.Navigator>
  );
}
...
        }}
      />
      <Tab.Screen
        name="ProfileTab"
        component={ProfileScreen}
        options={{
          title: 'Profile',
          headerShown: true,
          tabBarIcon: ({ color, size }) => <MaterialCommunityIcons name="account" size={size} color={color} />,
        }}
      />
    </Tab.Navigator>
  );
...
